--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="fr.sio.gobquiz">
+          package="com.bts.sio.gobquiz">
 
     <application
-        android:allowBackup="false"
-        android:icon="@drawable/ic_launcher"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="fr.sio.gobquiz.views.MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name="com.bts.sio.gobquiz.controller.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="fr.sio.gobquiz.views.GameActivity" />
-        <activity android:name="fr.sio.gobquiz.views.ScoreActivity" />
+        <activity android:name="com.bts.sio.gobquiz.controller.GameActivity">
+        </activity>
+        <activity android:name="com.bts.sio.gobquiz.controller.ScoresActivity">
+        </activity>
     </application>
 
 </manifest>
